--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                 <div class="gridCard1"><a href="projects/steam.html"><img src="assets/steamCard.png" alt="index card of Steam city project"></a></div>
                 <div class="gridCard2"><a href="projects/wok.html"><img src="assets/wokCard.png" alt="index card of Wok Asain Cuisine project"></a></div>
                 <div class="gridCard3"><a href="projects/showtunes.html"><img src="assets/showtunesCard.png" alt="index card of showtunes project"></a></div>
-                <div class="gridCard4"><a href="#"><img src="assets/greenComing.png"></a></div>
+                <div class="gridCard4"><a href="projects/workFlow.html"><img src="assets/animationCard.png" alt="index card of animations compilation project"></a></div>
                 <div class="gridCard5"><a href="#"><img src="assets/yellowComing.png"></a></div>
                 <div class="gridCard6"><a href="#"><img src="assets/blueComing.png"></a></div>
             </section>
